--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,26 +13,15 @@
           <%= link_to t('footer.btn_cover_page'), root_path  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_organization'), organizations_path  %>
+          <%= link_to t('footer.btn_agendas'), visitors_path  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_human_resources'), nil  %>
+          <%= link_to t('footer.btn_registration'), nil  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_legal_information'), nil  %>
+          <%= link_to t('footer.btn_normative'), nil  %>
         </li>
-        <li>
-          <%= link_to t('footer.btn_economy_budgets'), nil  %>
-        </li>
-        <li>
-          <%= link_to t('footer.btn_relationship_citizens'), nil  %>
-        </li>
-        <li>
-          <%= link_to t('footer.btn_environmen_urbanism'), nil  %>
-        </li>
-        <li>
-          <%= link_to t('footer.btn_access_information'), nil  %>
-        </li>
+
       </ul>
     </div>
     <div class="small-12 medium-3 mb20 columns">
@@ -50,6 +39,9 @@
         <li>
           <%= link_to 'decide.madrid.es', 'http://decide.madrid.es', target: 'blank'  %>
         </li>
+        <li>
+          <%= link_to 'transparencia.madrid.es', 'http://transparencia.madrid.es', target: 'blank'  %>
+        </li>
       </ul>
     </div>
   </div>
@@ -62,19 +54,19 @@
       <div class="small-12 medium-8 columns">
         <ul class="inline-list right">
           <li>
-            <%= link_to t('footer.btn_accessibility'), nil  %>
+            <%= link_to t('footer.btn_accessibility'), 'Esperando texto'  %>
           </li>
           <li>
-            <%= link_to t('footer.btn_contact'), nil  %>
+            <%= link_to t('footer.btn_contact'), 'http://www.madrid.es/portales/munimadrid/es/Inicio/El-Ayuntamiento/Contactar?vgnextfmt=default&vgnextchannel=2ff5891b0ed86210VgnVCM2000000c205a0aRCRD', target: 'blank'  %>
           </li>
           <li>
-            <%= link_to t('footer.btn_web_map'), nil  %>
+            <%= link_to t('footer.btn_web_map'), 'Crear sitemap con link clikable'  %>
           </li>
           <li>
-            <%= link_to t('footer.btn_legal_warning'), nil  %>
+            <%= link_to t('footer.btn_legal_warning'), 'https://transparencia.madrid.es/portales/transparencia/es/Aviso-legal?vgnextfmt=default&vgnextchannel=20d8508929a56510VgnVCM1000008a4a900aRCRD', target: 'blank'  %>
           </li>
           <li>
-            <%= link_to t('footer.btn_privacy_policy'), nil  %>
+            <%= link_to t('footer.btn_privacy_policy'), 'http://www.madrid.es/portales/munimadrid/es/Inicio/Proteccion-de-datos?vgnextfmt=default&vgnextoid=2c241e7b0f578010VgnVCM100000dc0ca8c0RCRD&vgnextchannel=251f43db40317010VgnVCM100000dc0ca8c0RCRD' , target: 'blank' %>
           </li>
         </ul>
       </div>
