--- a/app/views/visitors/_form.html.erb
+++ b/app/views/visitors/_form.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <div class="mb20">
-      <div class="small-12 left">
+      <div class="small-12 left mb20">
         <%= check_box_tag(:lobby_activity, value = "1", checked = check_filter_lobby_activity , id: "lobby_activity")%>
         <%= label_tag(:lobby_activity, t("backend.lobby_activity")) %>
       </div>
