Changed some text. Adjust faq page in responsive. Remove some comment from code.

--- a/app/views/infringement_emails/new.html.erb
+++ b/app/views/infringement_emails/new.html.erb
@@ -46,27 +46,23 @@
       <%= t('infringement_mailbox.text_block_first_html') %>
     </p>
     <p>
-      <%= t('infringement_mailbox.text_block_second_html') %>
-    </p>
-    <p>
-      <%= t('infringement_mailbox.text_block_third.title') %>
       <ul>
         <li>
-          <%= t('infringement_mailbox.text_block_third.first') %>
+          <%= t('infringement_mailbox.text_block_second.first') %>
         </li>
         <li>
-          <%= t('infringement_mailbox.text_block_third.second') %>
+          <%= t('infringement_mailbox.text_block_second.second') %>
         </li>
         <li>
-          <%= t('infringement_mailbox.text_block_third.third') %>
+          <%= t('infringement_mailbox.text_block_second.third') %>
         </li>
         <li>
-          <%= t('infringement_mailbox.text_block_third.four') %>
+          <%= t('infringement_mailbox.text_block_second.four') %>
         </li>
       </ul>
     </p>
     <p>
-      <%= t('infringement_mailbox.text_block_fourth') %>
+      <%= t('infringement_mailbox.text_block_fourth_html') %>
     </p>
 
   </fieldset>
