--- a/app/views/layouts/faq.html.erb
+++ b/app/views/layouts/faq.html.erb
@@ -26,7 +26,7 @@
     <%= render  'layouts/admin_messages' %>
     <div id="main-content" class="main-content">
       <div class="row">
-        <div class="small-12">
+        <div class="small-12 column">
             <%= yield %>
         </div>
       </div>
