--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,11 @@
-<div class="row">
-  <div class="small-2 column faq_sidebar">
+<div class="small-12 medium-12 column">
+  <div class="medium-3 column faq_sidebar show-for-medium-up">
     <%= link_to t(:back), :back %>
-
     <% @questions.each do |question| %>
       <div><%= question.position %>. <%= question.title %></div>
     <% end %>
   </div>
-  <div class="small-10 column faq_box">
+  <div class="small-12 medium-9 column faq_box">
     <h1><%= t('backend.faq.questions') %></h1>
 
     <% @questions.each do |question| %>
