--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -2,5 +2,10 @@
   <h1 class="organization_name post__title">
     <%= link_to organization.fullname, organization_path(organization), title: t("organizations.show.title") %>
   </h1>
-  <p><%= I18n.l organization.inscription_date, format: :complete %></p>
+  <p>
+    <%= I18n.l organization.inscription_date, format: :complete %>
+    <span class="bullet">&nbsp;&bull;&nbsp;</span>
+    <%= "#{t('organizations.events_as_lobby')}: #{events_as_lobby_by(organization)}" %>
+
+  </p>
 </article>
