--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -17,7 +17,7 @@
       <% unless search_by_filter? %>
         <p><strong class="result-l mb20"><%= organizations_index_subtitle %></strong></p>
       <% end %>
-    </div>
+      </div>
 
     <div class="row">
       <div class="tools">
@@ -42,6 +42,14 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="small-12 columns mb20">
+        <div class="text-left">
+          <%= paginate @organizations.hits %>
+        </div>
+      </div>
+    </div>
+
     <% @paginated_organizations.each do |organization| %>
       <%= render organization %>
     <% end %>
@@ -49,8 +57,8 @@
 </div>
 
 <div class="row">
-  <div class="small-12 large-7 small-offset-1 columns right mb20">
-    <div class="text-center">
+  <div class="small-12 columns mb20">
+    <div class="text-left">
       <%= paginate @organizations.hits %>
     </div>
   </div>
