organization show: Refactor if else.

--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -34,7 +34,7 @@
         <p>
           <%= t'registration_lobbies_index.normative.normative_description' %>
         </p>
-        <%= link_to t('btn_access'), faq_path  %>
+        <%= link_to t('btn_access'), code_of_conduct_path  %>
       </div>
     </figure>
   </div>
