--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -33,15 +33,7 @@
             <strong><%= t('organizations.show.canceled_at') %>:
             <br />
             </strong>
-            <% if @organization.canceled_at? %>
-              <%= @organization.canceled_at.strftime("%d/%m/%Y") %>
-            <% end %>
-          </p>
-
-          <p>
-            <strong><%= t('organizations.show.id') %>:
-            <br />
-            </strong><%= @organization.id %>
+            <%= @organization.canceled_at.strftime("%d/%m/%Y") if @organization.canceled_at? %>
           </p>
           <p>
             <strong><%= t('organizations.show.identifier') %>:
@@ -71,11 +63,11 @@
           </p>
           <p><strong><%= t('organizations.show.category') %>: </strong>
             <br />
-            <%= @organization.category.name %>
+            <%= @organization.category.name  %>
           </p>
           <p><strong><%= t('organizations.show.description') %>: </strong>
             <br />
-            <%= @organization.description.html_safe %>
+            <%= @organization.description.html_safe if @organization.description? %>
           </p>
           <p><strong><%= t('organizations.show.web') %>: </strong>
             <br />
@@ -89,12 +81,11 @@
           <span class="accordion-icon"></span>
         </div>
         <div class="content active">
-
           <% if @organization.fiscal_year.present? %>
             <p>
               <strong><%= t('organizations.show.fiscal_year') %>: </strong>
               <br />
-              <%= @organization.fiscal_year %>
+              <%= @organization.fiscal_year if @organization.fiscal_year? %>
             </p>
             <p>
               <strong><%= t('organizations.show.range_fund_title') %>: </strong>
@@ -104,17 +95,16 @@
             <p>
               <strong><%= t('organizations.show.subvention') %> : </strong>
               <br />
-              <%= t(@organization.subvention.to_s) %>
+              <%= t(@organization.subvention.to_s) if @organization.subvention? %>
             </p>
             <p>
               <strong><%= t('organizations.show.contract') %> </strong>
               <br />
-              <%= t(@organization.contract.to_s) %>
+              <%= t(@organization.contract.to_s) if @organization.contract? %>
             </p>
           <% else %>
             <%= t('organizations.show.no_results') %>
           <% end %>
-
         </div>
       </li>
       <li class="accordion-navigation active">
@@ -123,8 +113,9 @@
           <span class="fa accordion-icon"></span>
         </div>
         <div class="content active">
-          <% if @organization.represented_entities.each do |represented_entity| %>
-          <div class="represented-entities-block">
+          <% if @organization.represented_entities.present? %>
+            <% @organization.represented_entities.each do |represented_entity| %>
+              <div class="represented-entities-block">
             <p>
               <strong><%= t('organizations.show.represented_entity_identifier') %>: </strong>
               <br />
@@ -164,10 +155,10 @@
               <%= t(represented_entity.contract.to_s) %>
             </p>
           </div>
-
-            <% end.empty? %>
-              <%= t('organizations.show.no_results') %>
             <% end %>
+          <% else %>
+            <%= t('organizations.show.no_results') %>
+          <% end %>
         </div>
       </li>
       <li class="accordion-navigation active">
@@ -176,21 +167,23 @@
           <span class="fa accordion-icon"></span>
         </div>
           <div class="content active">
-            <% if @organization.agents.each do |agent| %>
-              <p>
-                <strong><%= t('organizations.show.agents_fullname') %>: </strong>
-                <br />
-                <%= agent.fullname %>
-              </p>
-              <p><strong><%= t('organizations.show.agents_from') %> : </strong>
-                <br />
-                <%= agent.from.strftime("%d/%m/%Y") %>
-              </p>
-              <p><strong><%= t('organizations.show.agents_to') %> : </strong>
-                <br />
-                <%= agent.to.strftime("%d/%m/%Y") if agent.to.present? %>
-              </p>
-            <% end.empty? %>
+            <% if @organization.agents.present? %>
+              <% @organization.agents.each do |agent| %>
+                <p>
+                  <strong><%= t('organizations.show.agents_fullname') %>: </strong>
+                  <br />
+                  <%= agent.fullname %>
+                </p>
+                <p><strong><%= t('organizations.show.agents_from') %> : </strong>
+                  <br />
+                  <%= agent.from.strftime("%d/%m/%Y") if agent.from? %>
+                </p>
+                <p><strong><%= t('organizations.show.agents_to') %> : </strong>
+                  <br />
+                  <%= agent.to.strftime("%d/%m/%Y") if agent.to.present? %>
+                </p>
+              <% end %>
+            <% else %>
               <%= t('organizations.show.no_results') %>
             <% end %>
         </div>
@@ -202,11 +195,13 @@
         </div>
           <div class="content active">
             <ul>
-              <% if @organization.interests.each do |interest| %>
-                <li>
-                  <p><%= interest.name %></p>
-                </li>
-              <% end.empty? %>
+              <% if @organization.interests.present? %>
+                <% @organization.interests.each do |interest| %>
+                  <li>
+                    <p><%= interest.name %></p>
+                  </li>
+                <% end %>
+              <% else %>
                 <%= t('organizations.show.no_results') %>
               <% end %>
             </ul>
@@ -217,13 +212,15 @@
           <%= t('organizations.show.events_title') %>
           <span class="fa accordion-icon"></span>
         </div>
-          <div class="content">
+          <div class="content active">
             <ul>
-              <% if @organization.events.each do |event| %>
-                <li>
-                  <p><%= link_to event.title, event_path(event) %></p>
-                </li>
-              <% end.empty? %>
+              <% if @organization.events.present? %>
+                <% @organization.events.each do |event| %>
+                  <li>
+                    <p><%= link_to event.title, event_path(event) %></p>
+                  </li>
+                <% end %>
+              <% else %>
                 <%= t('organizations.show.no_results') %>
               <% end %>
             </ul>
