Added some translate. Remove from home and registration_lobbies the access button for each box and added link on image and title. Added on some condition in the page show organization. Change font size only for a fieldset terms-fieldset. Added test in the passwords/edit.

--- a/app/views/admin/organizations/edit.html.erb
+++ b/app/views/admin/organizations/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Editar Organización</h1>
+<% if show_partial?('interests') %>
+  <h1><%= t'backend.edit_title_interests' %></h1>
+<% else %>
+  <h1><%= t'backend.edit_agents' %></h1>
+<% end %>
 <%= render :partial => 'form' %>
