--- a/app/views/admin/passwords/edit.html.erb
+++ b/app/views/admin/passwords/edit.html.erb
@@ -17,11 +17,13 @@
 
     <div class="field">
       <%= f.label :password, t("backend.new_password") %>
+      <small>La contraseña debe tener como mínimo 8 caracteres alfanuméricos</small>
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
     <div class="field">
       <%= f.label(:password_confirmation, t("backend.new_password_confirmation")) %>
+      <small>Vuelve a escribir la misma contraseña</small>
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
 
